[package]
name = "mytools"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
lazy_static = "1.4.0"
pb-rs = "0.9.1"
clap = { version = "4.0", features = ["derive","cargo"] }
nom = "3.2.1"
walkdir = "2.3.2"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3